- Point to last page of last journal on page-load (LIFO) - Fixed JournalPage Spacing

--- a/static/j_app/journal/less/base.less
+++ b/static/j_app/journal/less/base.less
@@ -66,6 +66,7 @@
 
 .page-view-ctr-wrapper{
 	float: left;
+	margin-bottom: 35px;
 	.page-view {
 		padding: 30px 0;
 		.journal-header {
